# fastapi_starter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
src/: apps.py  env_settings.py  main.py
src/orm/: __init__.py  _db.py
src/orm/migrations/: env.py
tests/: test_dummy.py
